tests/xml/validxml/permID/goodsatellites.xml.README
goodsatellites.mpcd.xml: OK as submmission and general. Note numbers a decimal not roman numeral 
