tests/xml/invalidxml/permID/badpermID.xml.README
badpermID.xml: BAD as submmission and general. Reject roman numerals and Minor Planet names
